--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.0",
-    "framer-motion": "^11.0.8",
-    "react-icons": "^5.4.0",
-    "echarts": "^5.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "framer-motion": "^10.16.4",
+    "react-icons": "^4.12.0",
+    "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
-    "date-fns": "4.1.0"
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.256",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.56.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.4.2"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.0.0"
   }
 }
