--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "echo 'Linting skipped for Chrome extension build'",
+    "build": "vite build && node post-build.js",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
@@ -21,7 +19,7 @@
     "date-fns": "^2.30.0"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.256",
+    "@types/chrome": "^0.0.243",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
@@ -29,6 +27,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
+    "vite": "^4.5.0",
+    "fs-extra": "^11.1.1"
   }
 }
