--- a/manifest.json
+++ b/manifest.json
@@ -35,13 +35,12 @@
   },
   "icons": {
     "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
   "web_accessible_resources": [
     {
-      "resources": ["icons/*", "assets/*"],
+      "resources": ["icons/*", "assets/*", "*.js", "*.css"],
       "matches": ["<all_urls>"]
     }
   ]
