--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "react-router-dom": "^6.20.0",
     "framer-motion": "^10.16.4",
     "react-icons": "^4.12.0",
-    "echarts": "^5.4.3",
-    "echarts-for-react": "^3.0.2",
-    "date-fns": "^2.30.0"
+    "@supabase/supabase-js": "^2.38.4"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.243",
